test/fail/mixins-system.mo
import Mixin "mixins/Mixin1";

persistent actor {
  include Mixin();
};
